--- a/src/Calendar.csproj
+++ b/src/Calendar.csproj
@@ -68,6 +68,11 @@
       <DependentUpon>DayOverviewWindow.xaml</DependentUpon>
     </Compile>
     <Compile Include="Model.cs" />
+    <Compile Include="Properties\Resources.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Resources.resx</DependentUpon>
+    </Compile>
     <Compile Include="Tooltip.xaml.cs">
       <DependentUpon>Tooltip.xaml</DependentUpon>
     </Compile>
@@ -247,6 +252,12 @@
   <ItemGroup>
     <Resource Include="Images\ShadeBottom13.png" />
     <Resource Include="Images\ShadeBottom5.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Properties\Resources.resx">
+      <Generator>ResXFileCodeGenerator</Generator>
+      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
